--- a/GammaBuilder.cabal
+++ b/GammaBuilder.cabal
@@ -1,5 +1,5 @@
 name:                gamma-builder
-version:             0.1.0.0
+version:             0.1.1.0
 synopsis:            Software to reconstrut Austenite for EBSD map.
 -- description:
 license:             AllRightsReserved
@@ -11,19 +11,21 @@ category:            Development
 build-type:          Simple
 cabal-version:       >=1.8
 
-
 library
   exposed-modules:   Gamma.OMRender
                      Gamma.GBRender
                      Gamma.Grains
                      Gamma.KurdjumovSachs
+                     Gamma.GammaFinder
   -- other-modules:
-  build-depends:     base   == 4.6.*
-                   , hammer               == 0.2.*
-                   , vector               == 0.10.*
-                   , bytestring           == 0.10.*
-                   , containers           == 0.5.*
-                   , unordered-containers == 0.2.*
+  build-depends:     base                 == 4.6.*
+                   , hammer               >= 0.3
+                   , sledge               >= 0.3.1
+                   , vector               >= 0.10
+                   , bytestring           >= 0.10
+                   , containers           >= 0.5
+                   , unordered-containers >= 0.2
+                   , random               >= 1
   exposed:           True
   buildable:         True
   ghc-options:      -O2
@@ -49,8 +51,10 @@ Executable gamma
                    , filepath             >= 1.3
                    , directory            >= 1.0
 
-                   , hammer               == 0.2.*
-                   , vector               == 0.10.*
-                   , bytestring           == 0.10.*
-                   , containers           == 0.5.*
-                   , unordered-containers == 0.2.*
+                   , hammer               >= 0.3
+                   , sledge               >= 0.3.1
+                   , vector               >= 0.10
+                   , bytestring           >= 0.10
+                   , containers           >= 0.5
+                   , unordered-containers >= 0.2
+                   , random               >= 1
