--- a/GammaBuilder.cabal
+++ b/GammaBuilder.cabal
@@ -68,5 +68,6 @@ Executable gamma
                    , random               >= 1
                    , hmatrix              >= 0.15
                    , monad-par            >= 0.3
+                   , parallel             >= 3.1
                    , deepseq              >= 1.1
                    , primitive
