--- a/GammaBuilder.cabal
+++ b/GammaBuilder.cabal
@@ -11,36 +11,6 @@ category:            Development
 build-type:          Simple
 cabal-version:       >=1.8
 
-library
-  exposed-modules:   Gamma.OMRender
-                     Gamma.GBRender
-                     Gamma.Grains
-                     Gamma.OR
-  -- other-modules:
-  build-depends:     base                 == 4.*
-                   , hammer               >= 0.4
-                   , sledge               >= 0.3.2
-                   , vector               >= 0.10
-                   , bytestring           >= 0.10
-                   , containers           >= 0.5
-                   , unordered-containers >= 0.2
-                   , random               >= 1
-                   , hmatrix              >= 0.15
-                   , monad-par            >= 0.3
-                   , deepseq              >= 1.1
-
-  exposed:           True
-  buildable:         True
-  ghc-options:      -O2
-                    -funbox-strict-fields
-                    -threaded
-                    -rtsopts
-                    -Wall
-                    -auto-all
-                    -caf-all
-  hs-source-dirs:    src
-
-
 Executable gamma
   Buildable:         True
   ghc-options:      -O2
@@ -52,8 +22,7 @@ Executable gamma
                     -caf-all
   hs-source-dirs:    src
   Main-Is:           Main.hs
-  Build-depends:     gamma-builder
-                   , base                 == 4.*
+  Build-depends:     base                 == 4.*
                    , optparse-applicative >= 0.5
                    , filepath             >= 1.3
                    , directory            >= 1.0
@@ -70,3 +39,4 @@ Executable gamma
                    , parallel             >= 3.1
                    , deepseq              >= 1.1
                    , primitive
+                   , tf-random            >= 0.4
