--- a/GammaBuilder.cabal
+++ b/GammaBuilder.cabal
@@ -40,3 +40,5 @@ Executable gamma
                    , deepseq              >= 1.1
                    , primitive
                    , tf-random            >= 0.4
+                   , mtl                  >= 2.1
+                   , process              >= 1.2
