--- a/GammaBuilder.cabal
+++ b/GammaBuilder.cabal
@@ -34,7 +34,7 @@ Executable gamma
                    , containers           >= 0.5
                    , unordered-containers >= 0.2
                    , random               >= 1
-                   , hmatrix              >= 0.15
+                   , hmatrix              < 0.16
                    , monad-par            >= 0.3
                    , parallel             >= 3.1
                    , deepseq              >= 1.1
