--- a/gamma-builder.cabal
+++ b/gamma-builder.cabal
@@ -12,7 +12,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 Executable gamma
-  Buildable:         True
+  buildable:         True
   ghc-options:      -O2
                     -funbox-strict-fields
                     -threaded
@@ -21,8 +21,14 @@ Executable gamma
                     -auto-all
                     -caf-all
   hs-source-dirs:    src
-  Main-Is:           Main.hs
-  Build-depends:     base                 == 4.*
+  main-Is:           Main.hs
+  other-modules:
+                    Gamma.Grains
+                    Gamma.OR
+                    Gamma.Strategy.GomesGraph
+                    Gamma.Strategy.Graph
+                    Gamma.Strategy.ORFitAll
+  build-depends:     base                 == 4.*
                    , optparse-applicative >= 0.10
                    , filepath             >= 1.3
                    , directory            >= 1.0
