Split VTK tools to its own package.

--- a/stack.yaml
+++ b/stack.yaml
@@ -10,6 +10,7 @@ packages:
 - packages/mcl/
 - packages/queryforest/
 - packages/sledge/
+- packages/vtk/
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps: []
