--- a/gamma-builder.cabal
+++ b/gamma-builder.cabal
@@ -34,8 +34,10 @@ Executable gamma
                    , directory            >= 1.0
 
                    , hammer               >= 0.4
+                   , linear-vect          >= 0.2
                    , sledge               >= 0.4
                    , vector               >= 0.10
+                   , vector-th-unbox      >= 0.2
                    , bytestring           >= 0.10
                    , containers           >= 0.5
                    , unordered-containers >= 0.2
