--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "packages/sledge"]
 	path = packages/sledge
-	url = https://github.org/lostbean/sledge.git
+	url = https://github.com/lostbean/sledge.git
 [submodule "packages/queryforest"]
 	path = packages/queryforest
-	url = https://github.org/lostbean/queryforest.git
+	url = https://github.com/lostbean/queryforest.git
 [submodule "packages/hammer"]
 	path = packages/hammer
-	url = https://github.org/lostbean/hammer.git
+	url = https://github.com/lostbean/hammer.git
 [submodule "packages/linear-vect"]
 	path = packages/linear-vect
 	url = https://github.com/lostbean/linear-vect.git
