--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ matrix:
     # - os: osx
     #   env: BUILD=osx
 
-env:
+git:
+  # whether to recursively clone submodules
+  submodules: true
 
 cache:
   directories:
