--- a/gamma-builder.cabal
+++ b/gamma-builder.cabal
@@ -33,6 +33,8 @@ Executable gamma
                    , filepath             >= 1.3
                    , directory            >= 1.0
                    , fast-logger          >= 2.4
+                   , tdigest              >= 0.2.1
+                   , text-format          >= 0.3
                    , hammer               >= 0.4
                    , linear-vect          >= 0.2
                    , sledge               >= 0.4
