--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ cache:
   - $HOME/.cabal
   - $HOME/.stack
   - $TRAVIS_BUILD_DIR/.stack-work
+  - $TRAVIS_BUILD_DIR/.stack-root
   - $TRAVIS_BUILD_DIR/packages/hammer/.stack-work
   - $TRAVIS_BUILD_DIR/packages/linear-vect/.stack-work
   - $TRAVIS_BUILD_DIR/packages/mcl/.stack-work
@@ -70,6 +71,7 @@ install:
     case "$BUILD" in
       linux)
         docker build --build-arg USERID=$(id -u) -t gamma_stack -f linux.Dockerfile .
+        docker container run -v $(pwd):/appdata:Z gamma_stack:latest build --no-terminal --install-ghc --only-dependencies --stack-root .stack-root
         ;;
       windows)
         mkdir -p ~/.local/bin
@@ -97,7 +99,7 @@ script:
         stack install --local-bin-path ".output/$BUILD-$TAG"
         ;;
       linux)
-        docker container run -v $(pwd):/appdata:Z gamma_stack:latest install --allow-different-user --local-bin-path ".output/$BUILD-$TAG"
+        docker container run -v $(pwd):/appdata:Z gamma_stack:latest install --allow-different-user --stack-root .stack-root --local-bin-path ".output/$BUILD-$TAG"
         ;;
       windows)
         stack install --local-bin-path ".output/$BUILD-$TAG"
