--- a/gamma-builder.cabal
+++ b/gamma-builder.cabal
@@ -29,6 +29,7 @@ Executable gamma
                     Gamma.Strategy.Graph
                     Gamma.Strategy.ORFitAll
   build-depends:     base                 == 4.*
+                   , aeson                >= 1.0
                    , optparse-applicative >= 0.10
                    , filepath             >= 1.3
                    , directory            >= 1.0
