--- a/gamma-builder.cabal
+++ b/gamma-builder.cabal
@@ -20,9 +20,44 @@ Executable gamma
                     -Wall
                     -fprof-auto
                     -fprof-cafs
-  hs-source-dirs:    src
+  hs-source-dirs:    src-cli
   main-Is:           Main.hs
-  other-modules:
+  build-depends:     gamma-builder
+                   , base                 == 4.*
+                   , optparse-applicative >= 0.10
+                   , filepath             >= 1.3
+                   , directory            >= 1.0
+                   , hammer               >= 0.4
+                   , linear-vect          >= 0.2
+                   , sledge               >= 0.4
+
+Executable gamma-server
+  buildable:         True
+  ghc-options:      -O2
+                    -funbox-strict-fields
+                    -threaded
+                    -rtsopts
+                    -Wall
+                    -fprof-auto
+                    -fprof-cafs
+  hs-source-dirs:    src-server
+  main-Is:           Main.hs
+  build-depends:     gamma-builder
+                   , base                 == 4.*
+                   , hammer               >= 0.4
+                   , linear-vect          >= 0.2
+                   , sledge               >= 0.4
+
+Library
+  hs-source-dirs:    src
+  ghc-options:      -O2
+                    -funbox-strict-fields
+                    -threaded
+                    -rtsopts
+                    -Wall
+                    -fprof-auto
+                    -fprof-cafs
+  exposed-modules:
                     Gamma.Grains
                     Gamma.OR
                     Gamma.Strategy.GomesGraph
@@ -30,9 +65,6 @@ Executable gamma
                     Gamma.Strategy.ORFitAll
   build-depends:     base                 == 4.*
                    , aeson                >= 1.0
-                   , optparse-applicative >= 0.10
-                   , filepath             >= 1.3
-                   , directory            >= 1.0
                    , fast-logger          >= 2.4
                    , tdigest              >= 0.2.1
                    , text-format          >= 0.3
@@ -50,3 +82,4 @@ Executable gamma
                    , tf-random            >= 0.4
                    , mtl                  >= 2.1
                    , process              >= 1.2
+                   , filepath             >= 1.3
