--- a/gamma-builder.cabal
+++ b/gamma-builder.cabal
@@ -11,6 +11,10 @@ category:            Development
 build-type:          Simple
 cabal-version:       >=1.8
 
+Flag server
+    Description:     Build the server exectable.
+    Default:         True
+
 Executable gamma
   buildable:         True
   ghc-options:      -O2
@@ -32,7 +36,8 @@ Executable gamma
                    , sledge               >= 0.4
 
 Executable gamma-server
-  buildable:         True
+  hs-source-dirs:    src-server
+  main-Is:           Main.hs
   ghc-options:      -O2
                     -funbox-strict-fields
                     -threaded
@@ -40,13 +45,22 @@ Executable gamma-server
                     -Wall
                     -fprof-auto
                     -fprof-cafs
-  hs-source-dirs:    src-server
-  main-Is:           Main.hs
   build-depends:     gamma-builder
-                   , base                 == 4.*
-                   , hammer               >= 0.4
-                   , linear-vect          >= 0.2
-                   , sledge               >= 0.4
+                   , base                       == 4.*
+                   , hammer                     >= 0.4
+                   , linear-vect                >= 0.2
+                   , sledge                     >= 0.4
+                   , aeson                      >= 1.0
+                   , aws                        >= 0.17.1
+                   , aws-lambda-haskell-runtime >= 2.0
+                   , bytestring                 >= 0.10
+                   , containers                 >= 0.5
+  other-modules:
+                     Handler.Person
+  if flag(server)
+    buildable:       True
+  else 
+    buildable:       True
 
 Library
   hs-source-dirs:    src
@@ -65,21 +79,21 @@ Library
                     Gamma.Strategy.ORFitAll
   build-depends:     base                 == 4.*
                    , aeson                >= 1.0
-                   , fast-logger          >= 2.4
-                   , tdigest              >= 0.2.1
-                   , text-format          >= 0.3
-                   , hammer               >= 0.4
-                   , linear-vect          >= 0.2
-                   , sledge               >= 0.4
-                   , vector               >= 0.10
-                   , vector-th-unbox      >= 0.2
                    , bytestring           >= 0.10
                    , containers           >= 0.5
-                   , unordered-containers >= 0.2
-                   , random               >= 1
-                   , monad-par            >= 0.3
-                   , parallel             >= 3.1
-                   , tf-random            >= 0.4
-                   , mtl                  >= 2.1
-                   , process              >= 1.2
+                   , fast-logger          >= 2.4
                    , filepath             >= 1.3
+                   , hammer               >= 0.4
+                   , linear-vect          >= 0.2
+                   , monad-par            >= 0.3
+                   , mtl                  >= 2.1
+                   , parallel             >= 3.1
+                   , process              >= 1.2
+                   , random               >= 1
+                   , sledge               >= 0.4
+                   , tdigest              >= 0.2.1
+                   , text-format          >= 0.3
+                   , tf-random            >= 0.4
+                   , unordered-containers >= 0.2
+                   , vector               >= 0.10
+                   , vector-th-unbox      >= 0.2
