--- a/.travis.yml
+++ b/.travis.yml
@@ -70,8 +70,7 @@ install:
     set -ex
     case "$BUILD" in
       linux)
-        docker build --build-arg USERID=$(id -u) -t gamma_stack -f linux.Dockerfile .
-        docker container run -v $(pwd):/appdata:Z gamma_stack:latest build --no-terminal --install-ghc --only-dependencies --stack-root /appdata/.stack-root
+        make install-deps
         ;;
       windows)
         mkdir -p ~/.local/bin
@@ -99,7 +98,7 @@ script:
         stack install --local-bin-path ".output/$BUILD-$TAG"
         ;;
       linux)
-        docker container run -v $(pwd):/appdata:Z gamma_stack:latest install --allow-different-user --stack-root /appdata/.stack-root --local-bin-path ".output/$BUILD-$TAG"
+        make
         ;;
       windows)
         stack install --local-bin-path ".output/$BUILD-$TAG"
