--- a/gamma-builder.cabal
+++ b/gamma-builder.cabal
@@ -59,6 +59,10 @@ Executable gamma-server
                    , aws-lambda-haskell-runtime >= 2.0
                    , bytestring                 >= 0.10
                    , containers                 >= 0.5
+                   , http-conduit               >= 2.0
+                   , conduit                    >= 1.3
+                   , conduit-extra              >= 1.3
+                   , resourcet                  >= 1.2
   other-modules:
                      Handler.Person
   if flag(server)
