--- a/arche.cabal
+++ b/arche.cabal
@@ -13,10 +13,17 @@ cabal-version:       >=1.8
 
 Flag server
     Description:     Build the server exectable.
+    Default:         False
+
+Flag cli
+    Description:     Build the cli exectable.
     Default:         True
 
 Executable arche
-  buildable:         True
+  if flag(cli)
+    buildable:       True
+  hs-source-dirs:    src-cli
+  main-Is:           Main.hs
   ghc-options:      -O2
                     -funbox-strict-fields
                     -threaded
@@ -24,18 +31,18 @@ Executable arche
                     -Wall
                     -fprof-auto
                     -fprof-cafs
-  hs-source-dirs:    src-cli
-  main-Is:           Main.hs
   build-depends:     arche
-                   , base                 == 4.*
-                   , optparse-applicative >= 0.10
-                   , filepath             >= 1.3
-                   , directory            >= 1.0
-                   , hammer               >= 0.4
-                   , linear-vect          >= 0.2
-                   , sledge               >= 0.4
+                  , base                 == 4.*
+                  , hammer               >= 0.4
+                  , linear-vect          >= 0.2
+                  , sledge               >= 0.4
+                  , directory            >= 1.0
+                  , filepath             >= 1.3
+                  , optparse-applicative >= 0.10
 
 Executable arche-server
+  if flag(server)
+   buildable:       True
   hs-source-dirs:    src-server
   main-Is:           Main.hs
   ghc-options:      -O2
@@ -50,35 +57,32 @@ Executable arche-server
                     -optl-pthread
   ld-options:       -static
   build-depends:     arche
-                   , base                       == 4.*
-                   , hammer                     >= 0.4
-                   , linear-vect                >= 0.2
-                   , sledge                     >= 0.4
-                   , aeson                      >= 1.0
-                   , aws                        >= 0.17.1
-                   , aws-lambda-haskell-runtime >= 2.0
-                   , bytestring                 >= 0.10
-                   , containers                 >= 0.5
-                   , http-conduit               >= 2.0
-                   , conduit                    >= 1.3
-                   , conduit-extra              >= 1.3
-                   , resourcet                  >= 1.2
-                   , uuid                       >= 1.0
+                  , base                       == 4.*
+                  , hammer                     >= 0.4
+                  , linear-vect                >= 0.2
+                  , sledge                     >= 0.4
+                  , aeson                      >= 1.0
+                  , aws                        >= 0.17.1
+                  , aws-lambda-haskell-runtime >= 2.0
+                  , bytestring                 >= 0.10
+                  , conduit                    >= 1.3
+                  , conduit-extra              >= 1.3
+                  , containers                 >= 0.5
+                  , http-conduit               >= 2.0
+                  , random                     >= 1.0
+                  , resourcet                  >= 1.2
+                  , text                       >= 1.0
+                  , uuid                       >= 1.0
   other-modules:
-                     Handler.GetSession
-                     Handler.SubmitANG 
-                     Util.AWS
-  if flag(server)
-    buildable:       True
-  else 
-    buildable:       True
+                    Handler.GetSession
+                    Handler.SubmitANG 
+                    Type.APIGateway
+                    Util.AWS
 
 Library
   hs-source-dirs:    src
   ghc-options:      -O2
                     -funbox-strict-fields
-                    -threaded
-                    -rtsopts
                     -Wall
                     -fprof-auto
                     -fprof-cafs
