Add structure to read ANG from s3 and parse it

--- a/arche.cabal
+++ b/arche.cabal
@@ -75,6 +75,7 @@ Executable arche-server
                   , uuid                       >= 1.0
   other-modules:
                     Handler.GetSession
+                    Handler.ORFit 
                     Handler.SubmitANG 
                     Type.APIGateway
                     Util.AWS
