--- a/arche.cabal
+++ b/arche.cabal
@@ -77,6 +77,7 @@ Executable arche-server
     , conduit                    >= 1.3
     , conduit-extra              >= 1.3
     , containers                 >= 0.5
+    , fast-logger                >= 2.4
     , http-conduit               >= 2.0
     , random                     >= 1.0
     , resourcet                  >= 1.2
