--- a/arche.cabal
+++ b/arche.cabal
@@ -15,6 +15,10 @@ Flag server
     Description:     Build the server exectable.
     Default:         False
 
+Flag static
+    Description:     Build the static server exectable.
+    Default:         False
+
 Flag cli
     Description:     Build the cli exectable.
     Default:         True
@@ -47,7 +51,7 @@ Executable arche-server
     buildable:    True
   else
     buildable:    False
-  if !os(darwin)
+  if flag(static)
     ld-options:   -static
     ghc-options:
       -fPIC
@@ -58,7 +62,6 @@ Executable arche-server
   ghc-options:
     -O2
     -funbox-strict-fields
-    -threaded
     -rtsopts
     -Wall
   hs-source-dirs: src-server
@@ -72,7 +75,6 @@ Executable arche-server
     , vtk                        >= 0.1
     , aeson                      >= 1.0
     , aws                        >= 0.17.1
-    , aws-lambda-haskell-runtime >= 2.0
     , bytestring                 >= 0.10
     , conduit                    >= 1.3
     , conduit-extra              >= 1.3
@@ -83,6 +85,8 @@ Executable arche-server
     , resourcet                  >= 1.2
     , text                       >= 1.0
     , uuid                       >= 1.0
+    , servant-server             >= 0.10
+    , warp                       >= 3.0
   other-modules:
     Handler.GetSession
     Handler.ORFit 
