Use cabal benchmark

--- a/arche.cabal
+++ b/arche.cabal
@@ -134,11 +134,8 @@ Library
     , vector               >= 0.10
     , vector-th-unbox      >= 0.2
 
-Executable arche-bench
-  if flag(benchmark)
-    buildable:    True
-  else
-    buildable:    False
+Benchmark arche-bench
+  type: exitcode-stdio-1.0
   ghc-options:
     -O2
     -funbox-strict-fields
@@ -149,13 +146,9 @@ Executable arche-bench
   build-depends:
       arche
     , base                       == 4.*
-    , hammer                     >= 0.4
     , linear-vect                >= 0.2
     , sledge                     >= 0.4
-    , vtk                        >= 0.1
-    , bytestring                 >= 0.10
     , containers                 >= 0.5
     , random                     >= 1.0
-    , text                       >= 1.0
     , criterion                  >= 1.0
     , vector                     >= 0.10
