--- a/arche.cabal
+++ b/arche.cabal
@@ -152,3 +152,26 @@ Benchmark arche-bench
     , random                     >= 1.0
     , criterion                  >= 1.0
     , vector                     >= 0.10
+
+test-suite test
+  type:           exitcode-stdio-1.0
+  main-is:        Main.hs
+  hs-source-dirs: test
+  build-depends:
+      arche
+    , linear-vect
+    , sledge
+    , base
+    , QuickCheck
+    , vector
+    , random
+    , tasty
+    , tasty-hunit
+    , tasty-quickcheck
+  other-modules:
+    Arche.TestOR
+  ghc-options:
+    -O2
+    -funbox-strict-fields
+    -rtsopts
+    -Wall
