--- a/arche.cabal
+++ b/arche.cabal
@@ -170,6 +170,7 @@ test-suite test
     , tasty-quickcheck
   other-modules:
     Arche.TestOR
+    Utils
   ghc-options:
     -O2
     -funbox-strict-fields
