Use Google Cloud for hosting

--- a/stack.yaml
+++ b/stack.yaml
@@ -10,9 +10,9 @@ packages:
 - packages/linear-vect/
 
 extra-deps:
-- aws-0.21.1@sha256:5290b819bd425f28c736b93a84955ced145bdb631a26d784d1b952e2e0ddc6b8,14259
-- aws-lambda-haskell-runtime-2.0.1@sha256:17a1a9ded282d9ddc2a77f9dc32a986edaf7b0c2a1eeaf4ab631762620e467c5,2893
-- text-format-0.3.2@sha256:ea4e0cfd66e5a0224cbff2753eb160e71c9e383e86f293db77adeba5706bab94,1766
+- gogol-storage-0.5.0@sha256:ba90fd79b014316e0c6088b30f9757e2394bb8af4265615ca5ea284b930586f9,4815
+- gogol-core-0.5.0@sha256:c0a919cd89a33de7fd6ee925abdb48b0eb5d1002a016124acbdff568f267e4c7,2821
+- gogol-0.5.0@sha256:01b38acf97ae0afb2465935fee1bebce03c1b84e629cf0887467be7ae361f0a7,3222
 
 flags:
   hammer:
