--- a/arche.cabal
+++ b/arche.cabal
@@ -73,25 +73,27 @@ Executable arche-server
     , sledge                     >= 0.4
     , vtk                        >= 0.1
     , aeson                      >= 1.0
-    , aws                        >= 0.17.1
     , bytestring                 >= 0.10
     , conduit                    >= 1.3
     , conduit-extra              >= 1.3
     , containers                 >= 0.5
     , fast-logger                >= 2.4
+    , gogol                      >= 0.4
+    , gogol-storage              >= 0.4
     , http-conduit               >= 2.0
+    , http-media                 >= 0.8
+    , lens                       >= 4.0
     , random                     >= 1.0
     , resourcet                  >= 1.2
-    , text                       >= 1.0
-    , uuid                       >= 1.0
     , servant-server             >= 0.10
+    , text                       >= 1.0
+    , unordered-containers       >= 0.2
+    , uuid                       >= 1.0
+    , vector                     >= 0.12
     , warp                       >= 3.0
   other-modules:
-    Handler.GetSession
     Handler.ORFit 
-    Handler.SubmitANG 
-    Type.APIGateway
-    Util.AWS
+    Type.Result
     Util.OrphanInstances
 
 Library
